<resources>
    <string name="app_name">7minutesapp</string>
    <string name="start">START</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="you_finished_your_exercises">You finished your exercises</string>
    <string name="congratulation">Congratulation</string>
    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>
    <string name="weight_in_kg">WEIGHT (in kg)</string>
    <string name="calculate">Calculate</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="weight_in_pounds">WEIGHT (in pounds)</string>
    <string name="calendar">calendar</string>
    <string name="history_is_empty">HISTORY IS EMPTY</string>
</resources>