<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FinishActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/item_color_accent_pushed"
            app:srcCompat="@drawable/ic_done"
            tools:layout_editor_absoluteX="169dp"
            tools:layout_editor_absoluteY="105dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congratulation"
            android:textColor="@color/accent"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="127dp"
            tools:layout_editor_absoluteY="259dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_finished_your_exercises"
            android:textColor="@color/accent"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="127dp"
            tools:layout_editor_absoluteY="259dp" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/accent"
            android:text="@string/back_to_menu" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>