<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    tools:context=".BmiActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarBmi"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"
        android:theme="@style/toolbar"
        app:title="BMI Calculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/primary">

    </androidx.appcompat.widget.Toolbar>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="@color/accent"
        app:hintTextColor="@color/accent"
>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/inputWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable ="@null"
            android:hint="@string/weight_in_kg"
            android:inputType="numberDecimal"
            android:textColor="@color/accent" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="@color/accent"
        app:hintTextColor="@color/accent"
        >
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/inputHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable ="@null"
            android:hint="@string/height_in_cm"
            android:inputType="numberDecimal"
            android:textColor="@color/accent" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/llShow"
        android:layout_marginTop="36dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        tools:visibility="visible"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/your_bmi"
            android:textSize="@dimen/default_text_size" />

        <TextView
            android:id="@+id/tvBMIres"
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            tools:text="21.00"
            android:textSize="@dimen/default_text_size"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tvSmallMsg"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            tools:text="Normal"
            android:textSize="@dimen/default_text_size"
            android:gravity="center"
            />
        <TextView
            android:padding="4dp"
            android:id="@+id/tvLongMsg"
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            tools:text="dfnmsdngeihfasdbfrudfbergbhewsgderhfuiwfweyysygwfbd"
            android:textSize="@dimen/default_text_size"
            android:gravity="center"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accent"
        android:text="@string/calculate" />

</LinearLayout>