<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:padding="@dimen/main_screen">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_main_page"
        tools:ignore="ContentDescription" />

    <FrameLayout
        android:id="@+id/flStart"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:gravity="center"
        android:background="@drawable/item_color_accent_pushed">
        <TextView
            android:layout_gravity="center"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"
            android:text="@string/start" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flStart">

        <FrameLayout
            android:id="@+id/flBMI"
            android:layout_width="100dp"
            android:layout_height="100dp"

            android:background="@drawable/item_color_accent_pushed"
            android:backgroundTint="@color/accent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/bmi"
                android:textColor="@color/white"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold" />

        </FrameLayout>
        <FrameLayout
            android:id="@+id/flCalendar"
            android:layout_width="100dp"
            android:layout_marginStart="20dp"
            android:layout_height="100dp"
            android:background="@drawable/item_color_accent_pushed"
            android:backgroundTint="@color/accent"
            android:gravity="center">

            <ImageView
                android:src="@drawable/ic_calendar"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:contentDescription="@string/calendar" />

        </FrameLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>